--- a/app/views/projects/_portfolio2.html.erb
+++ b/app/views/projects/_portfolio2.html.erb
@@ -1,6 +1,6 @@
 
 <a id="Projects"></a>
-<h1 class="projects-header">Projects</h1>
+<h1 class="projects-header"><span style="font-size:60px">Projects</span></h1>
 
 
 <div id="portfoliolist">
@@ -54,14 +54,13 @@
 
 
 
-<h1 class="projects-header">Images designed for Mobogenie,<br>an Android Mobile App Store</h1>
+<h1 class="projects-header">Images designed for <span style="color:#1ba5df">Mobogenie</span>,<br>an Android Mobile App Store</h1>
 
 
 
   <div class="portfolio logo" data-cat="logo">
     <div class="portfolio-wrapper">
-      <div class="mgscreenshot"><%= image_tag("collegemain_small.png") %></div>
-      <!-- <div class="mgscreenshot"><%= image_tag("zombiemain.png") %></div> -->
+      <div class="mgscreenshot"><%= image_tag("androidphone_college.jpg") %></div>
       <div class="label">
         <div class="label-text">
           <a class="text-title">Screenshot of College-themed App Collection Cover</a>
@@ -74,8 +73,7 @@
 
   <div class="portfolio logo" data-cat="logo">
     <div class="portfolio-wrapper">
-      <div class="mgscreenshot"><%= image_tag("superzombiecollect_small.png") %></div>
-      <!-- <div class="mgscreenshot"><%= image_tag("zombiemain.png") %></div> -->
+      <div class="mgscreenshot"><%= image_tag("androidphone_zombiesuperhero.jpg") %></div>
       <div class="label">
         <div class="label-text">
           <a class="text-title">Screenshot of Game App Collection Covers</a>
