--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -75,8 +75,8 @@ li.links a {
 }
 
 li.links {
-  font-family: "Lato", sans-serif;
-  font-size: 18px;
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 24px;
   padding: 5px;
   margin-right: 5px;
   background-color: #8A8AE6;
