--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -74,7 +74,7 @@
   .portfolio-wrapper {
     overflow:hidden;
     position: relative !important;
-    background: #fff;
+    background: none;
     cursor:pointer;
     width: 80%;
   }
