--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
         <%= link_to image_tag('aboutmeicon.jpg'), 'http://about.me/melzhang', target: "_blank" %>
       </div> -->
       <ul class="nav">
-        <li class="links button"><a href="<%= root_path %>#About">About</a></li>
+        <li class="links button"><a href="<%= root_path %>#About">About Me</a></li>
         <li class="links button"><a href="<%= root_path %>#Projects">Projects</a></li>
         <!-- <li class="links"><a href="<%= root_path %>#Projects">Interests</a></li> -->
         <!-- <li class="links"><%= link_to "Contact", new_contact_path %></li> -->
@@ -46,17 +46,14 @@
 
 <div class="footer">
   <div class="footer-text">
-    <p><%= link_to "Mel Zhang", "http://about.me/melzhang" %> &copy;<%= Time.now.year%></p>
+    <p><%= link_to "Mel Zhang", "" %> &copy;<%= Time.now.year%></p>
   </div>
-  <div class="footer-linkedin">
-      <a href="http://www.linkedin.com/in/melzhang/" style="color: white" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
+  <!-- <div class="footer-linkedin">
+      <%= link_to image_tag('linkedin_icon.jpg'), "http://www.linkedin.com/in/melzhang/", :target => "_blank" %>
   </div>
- <!--  <div class="footer-twitterbird">
-    <%= link_to image_tag('twitter-m.jpg', :alt => "https://twitter.com/zeemelon"), "https://twitter.com/zeemelon", :target => "_blank" %>
-  </div> -->
   <div class="footer-github">
     <a href="https://github.com/z22" style="color: white" target="_blank"><i class="fa fa-github-square fa-2x"></i></a>
-  </div>
+  </div> -->
 </div>
 
 <%= yield %>
