--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -17,6 +17,13 @@
   border-bottom: 3px #8A8AE6 solid;
 }
 
+.Projects {
+  width: 600px !important;
+  float: right;
+  margin-right: 20px;
+  margin-top: 0px;
+  padding-left: 10px;
+}
 
 
 
