--- a/app/views/projects/_portfolio2.html.erb
+++ b/app/views/projects/_portfolio2.html.erb
@@ -1,7 +1,9 @@
 
 <a id="Projects"></a>
-<h1 class="projects-header"><span style="font-size:60px">Projects</span></h1>
 
+<div class="bio">
+    <h1 class="bio-header">Projects</h1>
+  </div>
 
 <div id="portfoliolist">
 
@@ -9,32 +11,35 @@
 
 
 
-  <div class="portfolio logo" data-cat="logo">
-    <div class="portfolio-wrapper">
-      <%= link_to image_tag("inspirez_800_460.jpg", :alt => "http://inspirez.herokuapp.com"), "http://inspirez.herokuapp.com", :target => "_blank" %>
-      <div class="label">
-        <div class="label-text">
-          <a class="text-title">inspirez</a>
-          <span class="text-category">Get inspired. Take a break and read a random quote or watch a YouTube video. Tools: Ruby on Rails, HTML, CSS. </span>
-        </div>
-        <div class="label-bg"></div>
-      </div>
+<div class="portfolio logo" data-cat="logo">
+<div class="portfolio-wrapper">
+  <%= link_to image_tag("inspirez_800_460.jpg", :alt => "http://inspirez.herokuapp.com"), "http://inspirez.herokuapp.com", :target => "_blank" %>
+  <div class="label">
+    <div class="label-text">
+      <a class="text-title">inspirez</a>
+      <span class="text-category">Get inspired. Take a break and read a random quote or watch a YouTube video. Tools: Ruby on Rails, HTML, CSS. </span>
     </div>
+    <div class="label-bg"></div>
   </div>
+</div>
+</div>
 
 
-    <div class="portfolio logo" data-cat="logo">
-    <div class="portfolio-wrapper">
-      <%= link_to image_tag("sl.jpg"), "http://melzhang.herokuapp.com/", :target => "http://melzhang.herokuapp.com/" %>
-      <div class="label">
-        <div class="label-text">
-          <a class="text-title">Startup Landscapes</a>
-          <span class="text-category">List startups by industry. Uses the Crunchbase API. Tools: Ruby on Rails, HTML, CSS. </span>
-        </div>
-        <div class="label-bg"></div>
-      </div>
+
+
+<div class="portfolio logo" data-cat="logo">
+<div class="portfolio-wrapper">
+  <%= link_to image_tag("sl.jpg"), "http://melzhang.herokuapp.com/", :target => "http://melzhang.herokuapp.com/" %>
+  <div class="label">
+    <div class="label-text">
+      <a class="text-title">Startup Landscapes</a>
+      <span class="text-category">List startups by industry. Uses the Crunchbase API. Tools: Ruby on Rails, HTML, CSS. </span>
     </div>
+    <div class="label-bg"></div>
   </div>
+</div>
+</div>
+
 
 
 <div class="portfolio logo" data-cat="logo">
@@ -49,8 +54,6 @@
       </div>
     </div>
   </div>
-
-
 
 
 
@@ -239,5 +242,6 @@
       </div>
     </div>
   </div>
+
 
 </div>
