--- a/app/views/projects/_portfolio2.html.erb
+++ b/app/views/projects/_portfolio2.html.erb
@@ -57,7 +57,7 @@
 
 
 
-<h1 class="projects-header">Images designed for <span style="color:#1ba5df">Mobogenie</span>,<br>an Android Mobile App Store</h1>
+<h1 class="projects-header">Images for <span style="color:#1ba5df">Mobogenie</span>,<br>an Android Mobile App Store</h1>
 
 
 
