added word cloud to about section

--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -17,7 +17,7 @@
 .about {
   clear: both;
   position: relative;
-  padding-top: 100px;
+  /*padding-top: 100px;*/
 }
 
 .about-linkedin a:link {
@@ -85,6 +85,7 @@ ul.skills li {
   margin-right: 20px;
   margin-top: 0px;
   padding-left: 10px;
+  padding-top: 100px;
   color: #555;
   font-family: Lato;
 }
