--- a/app/views/projects/_portfolio2.html.erb
+++ b/app/views/projects/_portfolio2.html.erb
@@ -44,7 +44,7 @@
 
 <div class="portfolio logo" data-cat="logo">
     <div class="portfolio-wrapper">
-      <%= link_to image_tag("pw.jpg"), "http://startups-mankindforward.herokuapp.com/", :target => "http://startups-mankindforward.herokuapp.com/" %>
+      <%= link_to image_tag("pwblank.png"), "http://startups-mankindforward.herokuapp.com/", :target => "http://startups-mankindforward.herokuapp.com/" %>
       <div class="label">
         <div class="label-text">
           <a class="text-title">My Personal Website</a>
@@ -57,7 +57,7 @@
 
 
 
-<h1 class="projects-header">Images for <span style="color:#1ba5df">Mobogenie</span>,<br>an Android Mobile App Store</h1>
+<h1 class="projects-header">Images for <span style="color:#1ba5df;font-size:45px">Mobogenie</span>,<br>an Android Mobile App Store</h1>
 
 
 
@@ -184,7 +184,7 @@
       <div class="label">
         <div class="label-text">
           <a class="text-title">Space-Related App Collection</a>
-          <span class="text-category">Cover for a collection featuring apps such as NASA, Night Sky Tools, and Hubble Space Center.</span>
+          <span class="text-category">Cover for an astronomy collection featuring apps such as NASA, Night Sky Tools, and Hubble Space Center.</span>
         </div>
         <div class="label-bg"></div>
       </div>
