--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -82,12 +82,13 @@ ul.skills li {
   /*height: 600px;*/
   width: 600px;
   float: right;
-  margin-right: 20px;
+  margin-right: 80px;
   margin-top: 0px;
   padding-left: 10px;
   padding-top: 100px;
   color: #555;
   font-family: Lato;
+  clear: both;
 }
 
 .bio-header {
