--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -12,7 +12,6 @@
   margin-left: 51%;
   padding-top: 150px;
   float: left;
-  clear: both;
   position: relative;
   border-bottom: 3px #8A8AE6 solid;
 }
@@ -21,7 +20,7 @@
   width: 600px !important;
   float: right;
   margin-right: 20px;
-  margin-top: 0px;
+  /*margin-top: 0px;*/
   padding-left: 10px;
   padding-top: 100px;
 }
