--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -51,14 +51,17 @@ html {
 
 
 .linkedin {
-  height: 38.8888893127441px;
-  width: 33.3333358764648px;
+  height: 30.444px;
+  width: 45.222px;
   position: relative;
   float: left;
-  margin-right: 20px;
-  line-height: 35px;
+  margin-right: 30px;
+  line-height: 33px;
 }
 
+.fa-github-square {
+  margin-top: -2px;
+}
 
 .footer {
   position: fixed;
