--- a/app/views/projects/_portfolio2.html.erb
+++ b/app/views/projects/_portfolio2.html.erb
@@ -17,7 +17,7 @@
   <div class="label">
     <div class="label-text">
       <a class="text-title">inspirez</a>
-      <span class="text-category">Get inspired. Take a break and read a random quote or watch a YouTube video. Tools: Ruby on Rails, HTML, CSS. </span>
+      <span class="text-category">Random inspirational quotes and YouTube videos.</span>
     </div>
     <div class="label-bg"></div>
   </div>
@@ -33,7 +33,7 @@
   <div class="label">
     <div class="label-text">
       <a class="text-title">Startup Landscapes</a>
-      <span class="text-category">List startups by industry. Uses the Crunchbase API. Tools: Ruby on Rails, HTML, CSS. </span>
+      <span class="text-category">List startups by industry. Uses the Crunchbase API.</span>
     </div>
     <div class="label-bg"></div>
   </div>
@@ -48,7 +48,7 @@
       <div class="label">
         <div class="label-text">
           <a class="text-title">My Personal Website</a>
-          <span class="text-category">Tools: Ruby on Rails, HTML, CSS, Twitter Bootstrap, Javascript, jQuery. </span>
+          <span class="text-category"></span>
         </div>
         <div class="label-bg"></div>
       </div>
@@ -67,7 +67,7 @@
       <div class="label">
         <div class="label-text">
           <a class="text-title">Screenshot of College-themed App Collection Cover</a>
-          <span class="text-category">Screenshot of the image I designed for the college-themed app collection featured in Mobogenie, an Android app store.</span>
+          <span class="text-category">Image I designed for the college-themed app collection featured in Mobogenie.</span>
         </div>
         <div class="label-bg"></div>
       </div>
@@ -80,7 +80,7 @@
       <div class="label">
         <div class="label-text">
           <a class="text-title">Screenshot of Game App Collection Covers</a>
-          <span class="text-category">Images I designed for 2 collections I curated, featured on the game collections page in Mobogenie, an Android app store.</span>
+          <span class="text-category">Images I designed for 2 collections I curated, featured on the game collections page in Mobogenie.</span>
         </div>
         <div class="label-bg"></div>
       </div>
