--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -61,6 +61,11 @@ html {
 
 .fa-github-square {
   margin-top: -2px;
+  margin-right: 30px;
+}
+
+.fa-envelope {
+  margin-top: -2px;
 }
 
 .footer {
