--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -2,6 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.cloud {
+  padding-top: 30px;
+}
+
 .resources {
   font-family: Lato;
   font-weight: 700;
@@ -11,7 +15,7 @@
   /*list-style-type: none;*/
   font-size: 20px;
   font-family: Lato;
-  padding-top: 20px;
+  padding-top: 15px;
   padding-bottom: 20px;
 }
 
