updated font-awesome version

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <title>Mel Zhang</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Need the following link in order to see the font-awesome icon on every page -->
-  <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="dist/css/bootstrap.min.css">
   <!-- Optional theme -->
