--- a/app/views/projects/_portfolio2.html.erb
+++ b/app/views/projects/_portfolio2.html.erb
@@ -113,7 +113,7 @@
     </div>
   </div>
 
-<div class="portfolio logo" data-cat="logo">
+<!-- <div class="portfolio logo" data-cat="logo">
     <div class="portfolio-wrapper">
       <%= image_tag("EndofSummer_706x300.jpg") %>
       <div class="label">
@@ -124,7 +124,7 @@
         <div class="label-bg"></div>
       </div>
     </div>
-  </div>
+  </div> -->
 
 <div class="portfolio logo" data-cat="logo">
     <div class="portfolio-wrapper">
