--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -7,6 +7,9 @@
 <%= render "about/bio" %>
 
 <!-- Projects -->
-<%= render "projects/portfolio2" %>
+<!--<%= render "projects/projects" %>-->
+
+
+
 
 
