--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -41,7 +41,7 @@ body {
 }
 
 html {
-  background: image-url('ledge1light_wrinkledpaper_dark.jpg') no-repeat center center fixed;
+  background: image-url('ledge1light_bg.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
