--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
       </div> -->
       <ul class="nav">
         <li class="links button"><a href="<%= root_path %>#About">About Me</a></li>
-        <li class="links button"><a href="<%= root_path %>#Projects">Projects</a></li>
+        <li class="links button"><a href="<%= projects_path %>">Projects</a></li>
         <!-- <li class="links"><a href="<%= root_path %>#Projects">Interests</a></li> -->
         <!-- <li class="links"><%= link_to "Contact", new_contact_path %></li> -->
       </ul>
@@ -44,16 +44,11 @@
 
 
 
-<div class="footer">
+<!-- <div class="footer">
   <div class="footer-text">
     <p><%= link_to "Mel Zhang", "" %> &copy;<%= Time.now.year%></p>
-  </div>
-  <!-- <div class="footer-linkedin">
-      <%= link_to image_tag('linkedin_icon.jpg'), "http://www.linkedin.com/in/melzhang/", :target => "_blank" %>
-  </div>
-  <div class="footer-github">
-    <a href="https://github.com/z22" style="color: white" target="_blank"><i class="fa fa-github-square fa-2x"></i></a>
   </div> -->
+
 </div>
 
 <%= yield %>
