--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -42,6 +42,11 @@ body { padding-top: 80px; }
   height: auto !important;
 }
 
+.navbar-inverse {
+    background-color: transparent;
+    border: none;
+}
+
 .container {
   position: relative;
 }
