--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -12,6 +12,78 @@ html {
 }
 
 
+.page-header {
+  margin-top: 80px;
+  padding-left: 30px;
+  margin-bottom: 60px;
+  color: #8A8AE6;
+  font-family: Ostrich Sans Rounded;
+  font-size: 90px;
+  border-bottom: 2px solid #aaa;
+}
+
+
+.project-types {
+  margin-left: 30px;
+  margin-bottom: 80px;
+  h3 {
+  font-family: Bebas Neue;
+  font-size: 40px;
+  color: #000;
+  padding-right: 25px;
+  float: left;
+  }
+}
+
+.project-row {
+  margin-left: 30px;
+}
+
+.project-item {
+  float: left;
+  padding-left: 60px;
+  margin-bottom: 80px;
+  h3 {
+    font-family: Bebas Neue;
+    font-size: 40px;
+    a:link {
+      text-decoration: none;
+      color: #555;
+    }
+    a:visited {
+      text-decoration: none;
+      color: #555;
+    }
+    a:hover {
+      text-decoration: none;
+      background-color: transparent;
+      color: #fff;
+      -moz-transition: color 300ms;
+      -o-transition: color 300ms;
+      -webkit-transition: color 300ms;
+      transition: color 300ms;
+    }
+    a:active {
+      text-decoration: none;
+      color: #555;
+    }
+  }
+
+}
+
+
+.project-description {
+  font-family: Lato;
+  font-size: 30px;
+  padding-left: 30px;
+}
+
+
+
+
+
+// old layout
+
 .projects-header {
   font-family: Bebas Neue;
   font-size: 36px;
@@ -147,42 +219,4 @@ html {
 
 
 
-.page-header {
-  margin-top: 60px;
-  margin-left: 15px;
-  color: #0066FF;
-  font-family: Ostrich Sans Rounded;
-  font-size: 90px;
-  border-bottom: 2px solid #aaa;
-}
-
-.project-item {
-  float: left;
-  h3 {
-    font-family: Josefin Sans;
-    font-size: 40px;
-    a:link {
-      text-decoration: none;
-      color: #0066FF;
-    }
-    a:visited {
-      text-decoration: none;
-      color: #0066FF;
-    }
-    a:hover {
-      text-decoration: none;
-      background-color: transparent;
-      color: #fff;
-      -moz-transition: color 300ms;
-      -o-transition: color 300ms;
-      -webkit-transition: color 300ms;
-      transition: color 300ms;
-    }
-    a:active {
-      text-decoration: none;
-      color: #0066FF;
-    }
-  }
-
-}
 
