added hidden boolean to project

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -12,10 +12,15 @@ html {
 }
 
 
+.line {
+  border-bottom: 2px dashed #aaa;
+  margin-bottom: 60px;
+  clear: both;
+}
+
 .page-header {
   margin-top: 80px;
   padding-left: 30px;
-  margin-bottom: 60px;
   color: #8A8AE6;
   font-family: Ostrich Sans Rounded;
   font-size: 90px;
@@ -24,25 +29,35 @@ html {
 
 
 .project-types {
+  margin-top: 60px;
   margin-left: 30px;
-  margin-bottom: 80px;
+  margin-bottom: 60px;
   h3 {
   font-family: Bebas Neue;
   font-size: 40px;
   color: #000;
   padding-right: 25px;
-  float: left;
+  display: inline-block;
   }
 }
 
-.project-row {
+.project-row-header {
   margin-left: 30px;
+  margin-bottom: 30px;
+  clear: both;
+  h2 {
+  font-family: Bebas Neue;
+  font-size: 60px;
+  }
 }
 
 .project-item {
   float: left;
   padding-left: 60px;
   margin-bottom: 80px;
+  img {
+    padding-left: 15px;
+  }
   h3 {
     font-family: Bebas Neue;
     font-size: 40px;
@@ -72,10 +87,16 @@ html {
 }
 
 
+.project-image {
+  margin-left: 30px;
+  margin-bottom: 30px;
+}
+
 .project-description {
   font-family: Lato;
   font-size: 30px;
   padding-left: 30px;
+  color: #555;
 }
 
 
