--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -1,4 +1,3 @@
 %h1.page-header= @project.title
-
-= image_tag @project.image_url, size: "400x300"
+.project-image= image_tag @project.image_url, size: "700x300"
 %p.project-description= @project.description
