--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -19,7 +19,7 @@ html {
 }
 
 .page-header {
-  margin-top: 80px;
+  margin-top: 120px;
   padding-left: 30px;
   color: #8A8AE6;
   font-family: Ostrich Sans Rounded;
@@ -42,12 +42,13 @@ html {
 }
 
 .project-row-header {
-  margin-left: 30px;
+  margin-left: 45px;
   margin-bottom: 30px;
   clear: both;
   h2 {
   font-family: Bebas Neue;
   font-size: 60px;
+  color: #8A8AE6;
   }
 }
 
@@ -61,6 +62,8 @@ html {
   h3 {
     font-family: Bebas Neue;
     font-size: 40px;
+    /*margin-left: 15px;*/
+    text-align: center;
     a:link {
       text-decoration: none;
       color: #555;
@@ -86,10 +89,18 @@ html {
 
 }
 
+/*Show page*/
 
 .project-image {
-  margin-left: 30px;
-  margin-bottom: 30px;
+  padding-top: 50px;
+  img {
+    margin:auto;
+    position: absolute;
+    left:0;
+    right:0;
+    width: 700px;
+    height: 300px;
+  }
 }
 
 .project-description {
@@ -97,6 +108,9 @@ html {
   font-size: 30px;
   padding-left: 30px;
   color: #555;
+  margin-top: 40px;
+  text-align: center;
+  padding-top: 350px;
 }
 
 
