--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -1,3 +1,3 @@
 %h1.page-header= @project.title
-.project-image= image_tag @project.image_url, size: "700x300"
-%p.project-description= @project.description
+.project-image= image_tag @project.image_url
+.project-description= @project.description
