--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -1,3 +1,7 @@
-%h1.page-header= @project.title
-.project-image= image_tag @project.image_url
-.project-description= @project.description
+
+- if @project.notes == "Intern at Changyou.com (US)."
+  = render 'mobogenie'
+- else
+  %h1.page-header= @project.title
+  .project-image= image_tag @project.image_url
+  .project-description= @project.description
