--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -71,7 +71,7 @@ body { padding-top: 80px; }
 
 .container .nav {
   float: right;
-  margin-right: 90px;
+  margin-right: 60px;
 }
 
 li.links a {
@@ -83,7 +83,8 @@ li.links {
   font-family: "Bebas Neue", sans-serif;
   font-size: 24px;
   padding: 5px;
-  margin-right: 5px;
+  padding-top: 10px;
+  margin-left: 10px;
   background-color: #8A8AE6;
   &:visited {
     color: #555;
