--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -98,8 +98,8 @@ html {
     position: absolute;
     left:0;
     right:0;
-    width: 700px;
-    height: 300px;
+    width: 800;
+    height: 460;
   }
 }
 
@@ -110,7 +110,7 @@ html {
   color: #555;
   margin-top: 40px;
   text-align: center;
-  padding-top: 350px;
+  padding-top: 510px;
 }
 
 
