--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -1,5 +1,5 @@
 
-- if @project.notes == "Intern at Changyou.com (US)."
+- if @project.notes == "Intern at Changyou.com (US)"
   = render 'mobogenie'
 - else
   %h1.page-header= @project.title
