--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,11 +26,15 @@
   <div class="navbar-inner">
     <div class="container">
       <a class="navbar-logo" href="<%= root_url %>">Mel Zhang</a>
-      <!-- <div class="aboutmeicon">
-        <%= link_to image_tag('aboutmeicon.jpg'), 'http://about.me/melzhang', target: "_blank" %>
-      </div> -->
+
+      <div class="iconlinks">
+        <div class="linkedin"><%= link_to image_tag("mylinkedin.jpg"), "http://www.linkedin.com/in/melzhang/", :target => "_blank" %></div>
+        <a href="https://github.com/z22" style="color: #8A8AE6" target="_blank"><i class="fa fa-github-square fa-4x"></i></a>
+        <a href="mailto:mel.zhang@wellesley.edu" style="color: #8A8AE6" target="_blank"><i class="fa fa-envelope fa-4x"></i></a>
+      </div>
+
       <ul class="nav">
-        <li class="links button"><a href="<%= root_path %>#About">About Me</a></li>
+        <li class="links button"><a href="about/index">About Me</a></li>
         <li class="links button"><a href="<%= projects_path %>">Projects</a></li>
         <!-- <li class="links"><a href="<%= root_path %>#Projects">Interests</a></li> -->
         <!-- <li class="links"><%= link_to "Contact", new_contact_path %></li> -->
