--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -21,20 +21,16 @@
       %li HAML
       %li Git + Github
       %li Heroku
+      %li MySQL
 
     %ul.skills
       %h3 Frontend
       %li HTML
       %li CSS
       %li Bootstrap
-
-    %ul.skills
-      %h3 ( Currently Learning )
+      %li SASS/SCSS
       %li JavaScript
-      %li MySQL
-      %li SCSS
-      %li X3D
-      %li X3DOM
+      %li X3D/X3DOM
 
     %ul.skills
       %h3 Design
